# wake_master

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  machines.json  package-lock.json  package.json  server.js
.anchor/: config.json  rag_params.json
.github/workflows/: android-build.yml  release.yml
agent/: README.md  cli.js  mcp-server.js
clients/android/: README.md  gradlew  settings.gradle.kts
clients/android/app/: build.gradle.kts
clients/android/app/src/main/: AndroidManifest.xml
clients/android/app/src/main/java/com/wakemaster/app/: LanScanner.kt  MachineStore.kt  MainActivity.kt  MainViewModel.kt  WakeMasterApp.kt  WolSender.kt
clients/desktop/: package.json
clients/desktop/src/: app.js  index.css  index.html
clients/desktop/src-tauri/: Cargo.toml  tauri.conf.json
clients/desktop/src-tauri/capabilities/: default.json
clients/desktop/src-tauri/icons/: icon.icns
clients/desktop/src-tauri/src/: main.rs
clients/ios/: README.md
clients/ios/WakeMaster/: ContentView.swift  Machine.swift  MachineViewModel.swift  WOLSender.swift  WakeMasterApp.swift
clients/windows/: package.json
clients/windows/src/: app.js
clients/windows/src-tauri/: Cargo.toml  tauri.conf.json
clients/windows/src-tauri/src/: main.rs
lib/: core.js
public/: app.js  index.css  index.html
shared/: base.css
